# BREN-DEV

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/workflows/: tests.yml
alembic/: env.py
alembic/versions/: 29435342b3f0_create_users.py  a3e2c1169c50_seed_users.py  c77820223ed5_init.py  dc8aaa190a6f_seed_books.py
env/: .env.example
infra/: Dockerfile  docker-compose.yaml  startup.sh
infra/terraform/: README.md  config.example.yaml  ec2.tf  ecr_ecs.tf  main.tf  vpc.tf
src/: const.py  generic_deps.py  main.py
src/db/: enums.py
src/db/models/: __init__.py  base.py  books.py  users.py
src/db/repositories/: abstract.py  books.py  generic.py  users.py
src/db/schemas/: base.py  books.py  users.py
src/error_handlers/: __init__.py  http.py  models.py
src/modules/: __init__.py  db.py
src/v1/: __init__.py  app.py  security.py
src/v1/resources/: __init__.py
src/v1/resources/books/: deps.py  routes.py
src/v1/resources/health/: __init__.py  routes.py  schemas.py
src/v1/resources/users/: __init__.py  routes.py
src/v1/resources/users/auth/: routes.py
tests/integration/: conftest.py  test_books.py  test_health.py
tests/integration/books/: conftest.py  test_books.py
tests/integration/users/: test_users.py
